--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <!--
   Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
 -->
-<script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBs6fPQlqZFfY3pVRMYwiw2TIzoyenDd2c"
+<script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBs6fPQlqZFfY3pVRMYwiw2TIzoyenDd2c"
 ></script>
 
 <meta name="viewport" content="width=device-width,initial-scale=1">
